--- a/Beck/src/main/resources/application.properties
+++ b/Beck/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/inkybator?serverTimezone=Europe/Moscow&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/jira?serverTimezone=Europe/Moscow&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345
 server.port=8080
