--- a/2front/myapp/package.json
+++ b/2front/myapp/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "bootstrap": "4.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "bootstrap": "^4.3.1",
     "ngb-modal": "^2.0.3",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
