--- a/2front/myapp/package.json
+++ b/2front/myapp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.3.1",
+    "ng4-loading-spinner": "^1.2.3",
     "ngb-modal": "^2.0.3",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
