--- a/1Jirafapi/pom.xml
+++ b/1Jirafapi/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fapiJira</groupId>
-    <artifactId>Jirafapi</artifactId>
+    <groupId>a</groupId>
+    <artifactId>s</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
