--- a/1Jirafapi/src/main/resources/application.properties
+++ b/1Jirafapi/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8081
 backend.server.url=http://localhost:8080/
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate
